--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
       - image: fpco/stack-build:latest
     steps:
       - checkout
+      - run: stack upgrade && stack setup --resolver nightly --upgrade-cabal
       - run: rm -f stack.yaml && stack init --resolver nightly --solver
       - run: stack build --resolver nightly --haddock --test
 
